# Dixtionary-Server

./: .gitignore  Dockerfile  Pipfile  README.md  docker-compose.yml  heroku.yml  pyproject.toml
.github/workflows/: main.yml
database/: model.edgeql
dixtionary/: __main__.py  actions.py  config.py  http.py  model.py  server.py  websocket.py
dixtionary/database/: __init__.py  crud.py  pubsub.py  utils.py
dixtionary/extensions/: __init__.py  graphql.py  redis.py
dixtionary/gameplay/: __init__.py  dictionary.txt  loop.py
dixtionary/handlers/: http.py  websocket.py
dixtionary/handlers/utils/: authentication.py
dixtionary/middleware/: __init__.py  authentication.py
dixtionary/model/: __init__.py  context.py  mutations.py  query.py  subscriptions.py
dixtionary/utils/: asynchronous.py  json.py  redis.py  string.py
