[tool.poetry]
name = "dixtionary"
version = "0.1.0"
description = ""
authors = ["James Stidard <james@stidard.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.7"
sanic = "<19"
sanic-envconfig = "^1.3.4"
aiostream = "^0.3.1"
graphene = "<3"
itsdangerous = "^2.1.2"
Sanic-Cors = "<2"
aiodataloader = "^0.4.0"
graphql-ws = "0.3.0"
Rx = "<2"
Sanic-GraphQL = "^1.2.0"
loguru = "^0.7.2"
fuzzywuzzy = "^0.18.0"
aioredis = "1.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
